--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-ng-app="angharadApp">
+<html data-ng-app="sagremorApp">
 <head>
     
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <!-- endinject -->
     <!-- endbuild -->
 </head>
-<body data-ng-controller="angharadCtrl">
+<body data-ng-controller="angharadCtrl as angharadCtrl">
     <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
         your browser</a> to improve your experience.</p>
@@ -36,12 +36,13 @@
         <li><a data-ng-href="#/cameras"><i class="fa fa-video-camera"></i> Cameras</a></li>
         <li><a data-ng-href="#/music"><i class="fa fa-music"></i> Music</a></li>
         <li><a data-ng-href="#/maps"><i class="fa fa-map"></i> Maps</a></li>
-        <li><a data-ng-href="#/weather"><i class="fa fa-weather"></i> Weather</a></li>
+        <li><a data-ng-href="#/weather"><i class="fa fa-sun-o"></i> Weather</a></li>
         <li><a data-ng-href="#/scripts"><i class="fa fa-tasks"></i> Scripts</a></li>
         <li><a data-ng-href="#/events"><i class="fa fa-calendar"></i> Events</a></li>
         <li><a data-ng-href="#/monitors"><i class="fa fa-bar-chart"></i> Monitors</a></li>
         <li><a data-ng-href="#/logs"><i class="fa fa-history"></i> Logs</a></li>
         <li><a data-ng-href="#/parameters"><i class="fa fa-cogs"></i> Parameters</a></li>
+        <li><a href="" data-ng-click="angharadCtrl.logout()"><i class="fa fa-sign-out"></i> Logout</a></li>
       </ul>
     </nav>
     
