--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
         your browser</a> to improve your experience.</p>
     <![endif]-->
+    <toaster-container></toaster-container>
     
     <nav class="nav-collapse">
       <ul>
