--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     
     <nav class="nav-collapse">
       <ul>
+        <li><span data-translate="plop"></span></li>
         <li><a data-ng-href="#/"><i class="fa fa-home"></i> Home</a></li>
         <li><a data-ng-href="#/switches"><i class="fa fa-lightbulb-o"></i> Lights and switches</a></li>
         <li><a data-ng-href="#/heaters"><i class="fa fa-fire"></i> Heaters</a></li>
