--- a/src/index.html
+++ b/src/index.html
@@ -30,21 +30,20 @@
     
     <nav class="nav-collapse">
       <ul>
-        <li><span data-translate="plop"></span></li>
-        <li><a data-ng-href="#/"><i class="fa fa-home"></i> Home</a></li>
-        <li><a data-ng-href="#/switches"><i class="fa fa-lightbulb-o"></i> Lights and switches</a></li>
-        <li><a data-ng-href="#/heaters"><i class="fa fa-fire"></i> Heaters</a></li>
-        <li><a data-ng-href="#/sensors"><i class="fa fa-line-chart"></i> Sensors</a></li>
-        <li><a data-ng-href="#/cameras"><i class="fa fa-video-camera"></i> Cameras</a></li>
-        <li><a data-ng-href="#/music"><i class="fa fa-music"></i> Music</a></li>
-        <li><a data-ng-href="#/maps"><i class="fa fa-map"></i> Maps</a></li>
-        <li><a data-ng-href="#/weather"><i class="fa fa-sun-o"></i> Weather</a></li>
-        <li><a data-ng-href="#/scripts"><i class="fa fa-tasks"></i> Scripts</a></li>
-        <li><a data-ng-href="#/events"><i class="fa fa-calendar"></i> Events</a></li>
-        <li><a data-ng-href="#/monitors"><i class="fa fa-bar-chart"></i> Monitors</a></li>
-        <li><a data-ng-href="#/logs"><i class="fa fa-history"></i> Logs</a></li>
-        <li><a data-ng-href="#/parameters"><i class="fa fa-cogs"></i> Parameters</a></li>
-        <li><a href="" data-ng-click="angharadCtrl.logout()"><i class="fa fa-sign-out"></i> Logout</a></li>
+        <li><a data-ng-href="#/"><i class="fa fa-home"></i><span class="left-menu" data-translate="menu_home"></span></a></li>
+        <li><a data-ng-href="#/switches"><i class="fa fa-lightbulb-o"></i><span class="left-menu" data-translate="menu_lights"></span></a></li>
+        <li><a data-ng-href="#/heaters"><i class="fa fa-fire"></i><span class="left-menu" data-translate="menu_heaters"></span></a></li>
+        <li><a data-ng-href="#/sensors"><i class="fa fa-line-chart"></i><span class="left-menu" data-translate="menu_sensors"></span></a></li>
+        <li><a data-ng-href="#/cameras"><i class="fa fa-video-camera"></i><span class="left-menu" data-translate="menu_camera"></span></a></li>
+        <li><a data-ng-href="#/music"><i class="fa fa-music"></i><span class="left-menu" data-translate="menu_music"></span></a></li>
+        <li><a data-ng-href="#/maps"><i class="fa fa-map"></i><span class="left-menu" data-translate="menu_maps"></span></a></li>
+        <li><a data-ng-href="#/weather"><i class="fa fa-sun-o"></i><span class="left-menu" data-translate="menu_weather"></span></a></li>
+        <li><a data-ng-href="#/scripts"><i class="fa fa-tasks"></i><span class="left-menu" data-translate="menu_scripts"></span></a></li>
+        <li><a data-ng-href="#/events"><i class="fa fa-calendar"></i><span class="left-menu" data-translate="menu_events"></span></a></li>
+        <li><a data-ng-href="#/monitors"><i class="fa fa-bar-chart"></i><span class="left-menu" data-translate="menu_monitor"></span></a></li>
+        <li><a data-ng-href="#/logs"><i class="fa fa-history"></i><span class="left-menu" data-translate="menu_logs"></span></a></li>
+        <li><a data-ng-href="#/parameters"><i class="fa fa-cogs"></i><span class="left-menu" data-translate="menu_parameters"></span></a></li>
+        <li><a href="" data-ng-click="angharadCtrl.logout()"><i class="fa fa-sign-out"></i><span class="left-menu" data-translate="menu_logout"></span></a></li>
       </ul>
     </nav>
     
