--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <!-- endinject -->
     <!-- endbuild -->
 </head>
-<body data-ng-controller="angharadCtrl" data-ng-controller-as="angharadCtrl">
+<body data-ng-controller="sagremorCtrl" data-ng-controller-as="sagremorCtrl">
     <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
         your browser</a> to improve your experience.</p>
