--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html data-ng-app="sagremorApp">
 <head>
-    
+    <base href="/">
     <meta charset="utf-8">
     <title>Angharad</title>
     <meta name="description" content="Angharad Home Automation Manager">
