--- a/src/index.html
+++ b/src/index.html
@@ -30,15 +30,15 @@
     <data-toaster-container></data-toaster-container>
 
     <div role="main" class="main row">
-        <data-top-right-menu></data-top-right-menu>
-        <div class="top col-xs-1">
+        <div class="col-xs-1">
             <data-top-left-menu></data-top-left-menu>
         </div>
         <div class="col-xs-11">
             <div class="tab-content">
                 <div data-ui-view class="tab-pane active" id="tabView"></div>
-            </div
+            </div>
         </div>
+        <data-top-right-menu></data-top-right-menu>
     </div>
     
     <!-- build:js(src) scripts/vendor.js -->
