Use left menu with pills

--- a/src/index.html
+++ b/src/index.html
@@ -30,13 +30,11 @@
     <data-toaster-container></data-toaster-container>
 
     <div role="main" class="main row">
-        <div class="col-xs-1">
+        <div class="tabbable sag-tabs-left col-xs-1">
             <data-top-left-menu></data-top-left-menu>
         </div>
-        <div class="col-xs-11">
-            <div class="tab-content">
-                <div data-ui-view class="tab-pane active" id="tabView"></div>
-            </div>
+        <div class="tab-content col-xs-11">
+            <div data-ui-view class="tab-pane active" id="tabView"></div>
         </div>
         <data-top-right-menu></data-top-right-menu>
     </div>
