--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,15 @@
   // So we can get the config.json file prior to everything else
   // Thanks to Jaco Pretorius: https://jacopretorius.net/2016/09/loading-configuration-data-on-startup-with-angular.html
   $(function(){
-      $.get('config.json', (response) => {
+    $.get('config.json', (response) => {
       angular.module('sagremorApp').constant("angharadConfig", response);
       angular.bootstrap(document, ['sagremorApp']);
+    })
+    .fail(
+    (error) => {
+      if (error.status === 404) {
+        document.write("No config.json file present");
+      }
     });
   });
 </script>
